Format Java code with clang-format
Signed-off-by: Pierangelo Di Pilato <pdipilat@redhat.com>