@@ -15,23 +15,6 @@
  */
 package dev.knative.eventing.kafka.broker.dispatcher.main;
 
-import dev.knative.eventing.kafka.broker.contract.DataPlaneContract;
-import dev.knative.eventing.kafka.broker.core.reconciler.ResourcesReconciler;
-import io.vertx.core.AbstractVerticle;
-import io.vertx.core.Vertx;
-import io.vertx.junit5.VertxExtension;
-import io.vertx.junit5.VertxTestContext;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.concurrent.ExecutionException;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.Timeout;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.api.parallel.Execution;
-import org.junit.jupiter.api.parallel.ExecutionMode;
-
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress1;
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress2;
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress3;
@@ -40,44 +23,58 @@ import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress5
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress6;
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.resource1;
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.resource2;
+
 import static org.assertj.core.api.Assertions.assertThat;
+
+import dev.knative.eventing.kafka.broker.contract.DataPlaneContract;
+import dev.knative.eventing.kafka.broker.core.reconciler.ResourcesReconciler;
+
+import io.vertx.core.AbstractVerticle;
+import io.vertx.core.Vertx;
+import io.vertx.junit5.VertxExtension;
+import io.vertx.junit5.VertxTestContext;
+
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.concurrent.ExecutionException;
+
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
 
 @ExtendWith(VertxExtension.class)
 @Execution(ExecutionMode.CONCURRENT)
 public class ConsumerDeployerVerticleTest {
-
   private static final int NUM_SYSTEM_VERTICLES = 1;
 
   @Test
   @Timeout(value = 2)
-  public void shouldAddResourceAndDeployVerticles(final Vertx vertx, final VertxTestContext context)
+  public void shouldAddResourceAndDeployVerticles(
+    final Vertx vertx, final VertxTestContext context)
     throws ExecutionException, InterruptedException {
-    final var resources = List.of(
-      resource1(),
-      resource2()
-    );
+    final var resources = List.of(resource1(), resource2());
     final var numEgresses = numEgresses(resources);
     final var checkpoints = context.checkpoint(1);
 
     final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+      (resource, egress) -> new AbstractVerticle() {}, 100);
 
     vertx.deployVerticle(consumerDeployer)
       .toCompletionStage()
       .toCompletableFuture()
       .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler =
+      ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
     reconciler.reconcile(resources)
       .onSuccess(ignored -> context.verify(() -> {
-        assertThat(vertx.deploymentIDs()).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
+        assertThat(vertx.deploymentIDs())
+          .hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
         checkpoints.flag();
       }))
       .onFailure(context::failNow);
@@ -86,31 +83,23 @@ public class ConsumerDeployerVerticleTest {
   @Test
   @Timeout(value = 2)
   public void shouldNotDeployWhenFailedToGetVerticle(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
-
-    final var resources = List.of(
-      resource1(),
-      resource2()
-    );
+    final Vertx vertx, final VertxTestContext context)
+    throws ExecutionException, InterruptedException {
+    final var resources = List.of(resource1(), resource2());
     final var checkpoint = context.checkpoint(1);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> {
+    final var consumerDeployer =
+      new ConsumerDeployerVerticle((resource, egress) -> {
         throw new UnsupportedOperationException();
-      },
-      100
-    );
+      }, 100);
 
     vertx.deployVerticle(consumerDeployer)
       .toCompletionStage()
       .toCompletableFuture()
       .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler =
+      ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
     reconciler.reconcile(resources)
       .onFailure(ignored -> context.verify(() -> {
@@ -123,55 +112,46 @@ public class ConsumerDeployerVerticleTest {
   @Test
   @Timeout(value = 2)
   public void shouldStopVerticleWhenEgressDeleted(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
-
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addEgresses(egress1())
-        .build()
-    );
+    final Vertx vertx, final VertxTestContext context)
+    throws ExecutionException, InterruptedException {
+    final var resourcesOld = List.of(DataPlaneContract.Resource.newBuilder()
+                                       .setUid("1-1234")
+                                       .addTopics("1-12345")
+                                       .addEgresses(egress1())
+                                       .build());
     final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .build()
-    );
+    final var resourcesNew = List.of(DataPlaneContract.Resource.newBuilder()
+                                       .setUid("1-1234")
+                                       .addTopics("1-12345")
+                                       .build());
     final var numEgressesNew = numEgresses(resourcesNew);
 
     final var checkpoints = context.checkpoint(2);
 
     final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+      (resource, egress) -> new AbstractVerticle() {}, 100);
 
     vertx.deployVerticle(consumerDeployer)
       .toCompletionStage()
       .toCompletableFuture()
       .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler =
+      ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
     reconciler.reconcile(resourcesOld)
       .onSuccess(ignored -> {
-
         context.verify(() -> {
-          assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+          assertThat(vertx.deploymentIDs())
+            .hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
           checkpoints.flag();
         });
 
         reconciler.reconcile(resourcesNew)
           .onSuccess(ok -> context.verify(() -> {
-            assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+            assertThat(vertx.deploymentIDs())
+              .hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
             checkpoints.flag();
           }))
           .onFailure(context::failNow);
@@ -182,65 +162,52 @@ public class ConsumerDeployerVerticleTest {
   @Test
   @Timeout(value = 2)
   public void shouldStopVerticlesWhenResourceDeleted(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
-
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2(),
-          egress3()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4()
-        ))
-        .build()
-    );
+    final Vertx vertx, final VertxTestContext context)
+    throws ExecutionException, InterruptedException {
+    final var resourcesOld =
+      List.of(DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress2(), egress3()))
+                .build(),
+              DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addAllEgresses(Arrays.asList(egress4()))
+                .build());
     final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .build()
-    );
+    final var resourcesNew = List.of(DataPlaneContract.Resource.newBuilder()
+                                       .setUid("1-1234")
+                                       .addTopics("1-12345")
+                                       .build());
     final var numEgressesNew = numEgresses(resourcesNew);
 
     final var checkpoints = context.checkpoint(2);
 
     final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+      (resource, egress) -> new AbstractVerticle() {}, 100);
 
     vertx.deployVerticle(consumerDeployer)
       .toCompletionStage()
       .toCompletableFuture()
       .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler =
+      ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
     reconciler.reconcile(resourcesOld)
       .onSuccess(ignored -> {
         context.verify(() -> {
-          assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+          assertThat(vertx.deploymentIDs())
+            .hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
           checkpoints.flag();
         });
 
         reconciler.reconcile(resourcesNew)
           .onSuccess(ok -> context.verify(() -> {
-            assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+            assertThat(vertx.deploymentIDs())
+              .hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
             checkpoints.flag();
           }))
           .onFailure(context::failNow);
@@ -251,87 +218,69 @@ public class ConsumerDeployerVerticleTest {
   @Test
   @Timeout(value = 2)
   public void shouldStopAndStartVerticlesWhenEgressDeletedAndReAdded(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
-
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4(),
-          egress5(),
-          egress6()
-        ))
-        .build()
-    );
+    final Vertx vertx, final VertxTestContext context)
+    throws ExecutionException, InterruptedException {
+    final var resourcesOld =
+      List.of(DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress2()))
+                .build(),
+              DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addAllEgresses(Arrays.asList(egress4(), egress5(), egress6()))
+                .build());
     final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress3()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addEgresses(
-          egress4()
-        )
-        .build()
-    );
+    final var resourcesNew =
+      List.of(DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress3()))
+                .build(),
+              DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addEgresses(egress4())
+                .build());
     final var numEgressesNew = numEgresses(resourcesNew);
 
     final var checkpoints = context.checkpoint(3);
 
     final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+      (resource, egress) -> new AbstractVerticle() {}, 100);
 
     vertx.deployVerticle(consumerDeployer)
       .toCompletionStage()
       .toCompletableFuture()
       .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler =
+      ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
     final var oldDeployments = vertx.deploymentIDs();
     reconciler.reconcile(resourcesOld)
       .onSuccess(ignored -> {
-
         context.verify(() -> {
-          assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+          assertThat(oldDeployments)
+            .hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
           checkpoints.flag();
         });
 
         reconciler.reconcile(resourcesNew)
           .onSuccess(ok -> {
             context.verify(() -> {
-              assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+              assertThat(vertx.deploymentIDs())
+                .hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
               assertThat(vertx.deploymentIDs()).containsAll(oldDeployments);
               checkpoints.flag();
             });
 
             reconciler.reconcile(resourcesOld)
               .onSuccess(ok2 -> context.verify(() -> {
-                assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                assertThat(oldDeployments)
+                  .hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
                 checkpoints.flag();
               }));
           })
@@ -343,51 +292,36 @@ public class ConsumerDeployerVerticleTest {
   @Test
   @Timeout(value = 2)
   public void shouldDoNothingWhenTheStateIsTheSame(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
-
-    final var resources = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4(),
-          egress5(),
-          egress6()
-        ))
-        .build()
-    );
+    final Vertx vertx, final VertxTestContext context)
+    throws ExecutionException, InterruptedException {
+    final var resources =
+      List.of(DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress2()))
+                .build(),
+              DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addAllEgresses(Arrays.asList(egress4(), egress5(), egress6()))
+                .build());
     final var numEgresses = numEgresses(resources);
 
     final var checkpoints = context.checkpoint(2);
 
     final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+      (resource, egress) -> new AbstractVerticle() {}, 100);
 
     vertx.deployVerticle(consumerDeployer)
       .toCompletionStage()
       .toCompletableFuture()
       .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler =
+      ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
     reconciler.reconcile(resources)
       .onSuccess(ignored -> {
-
         final var deployments = vertx.deploymentIDs();
 
         context.verify(() -> {
@@ -404,14 +338,17 @@ public class ConsumerDeployerVerticleTest {
   }
 
   @Test
-  public void shouldThrowIfEgressesInitialCapacityIsLessOrEqualToZero(final Vertx vertx) {
-    Assertions.assertThrows(IllegalArgumentException.class, () -> new ConsumerDeployerVerticle(
-      (resource, egress) -> null,
-      -1
-    ));
+  public void shouldThrowIfEgressesInitialCapacityIsLessOrEqualToZero(
+    final Vertx vertx) {
+    Assertions.assertThrows(
+      IllegalArgumentException.class,
+      () -> new ConsumerDeployerVerticle((resource, egress) -> null, -1));
   }
 
-  private static int numEgresses(Collection<DataPlaneContract.Resource> resources) {
-    return resources.stream().mapToInt(DataPlaneContract.Resource::getEgressesCount).sum();
+  private static int numEgresses(
+    Collection<DataPlaneContract.Resource> resources) {
+    return resources.stream()
+      .mapToInt(DataPlaneContract.Resource::getEgressesCount)
+      .sum();
   }
 }
